feat: add opcao linguagem pt_br e en_us para narrativas do mod

--- a/src/main/resources/assets/arcana/lang/en_us.json
+++ b/src/main/resources/assets/arcana/lang/en_us.json
@@ -5,9 +5,5 @@
   "diary.arcana.subtitle": "Chronicle of Hubris",
   "diary.arcana.tooltip.line1": "§6An ancient tome of forbidden knowledge",
   "diary.arcana.tooltip.line2": "§7Right-click to read",
-  "diary.arcana.tooltip.line3": "§8\"I challenged the stars...\"",
-
-  "config.arcana.enableDiarySpawn": "Enable Diary Spawn",
-  "config.arcana.chestSpawnDistance": "Chest Spawn Distance",
-  "config.arcana.debugMode": "Debug Mode"
+  "diary.arcana.tooltip.line3": "§8\"I challenged the stars...\""
 }
