alterando o texto das conquista do diário, para ficar mais coerente

--- a/src/main/resources/assets/arcana/lang/en_us.json
+++ b/src/main/resources/assets/arcana/lang/en_us.json
@@ -8,7 +8,7 @@
   "diary.arcana.tooltip.line3": "§8\"I challenged the stars...\"",
 
   "advancement.arcana.root.title": "Arcana",
-  "advancement.arcana.root.description": "The mysteries await...",
-  "advancement.arcana.first_diary.title": "First Diary",
-  "advancement.arcana.first_diary.description": "You received the Arcana Diary for the first time."
+  "advancement.arcana.root.description": "The stars are watching us...",
+  "advancement.arcana.first_diary.title": "Strange Diary",
+  "advancement.arcana.first_diary.description": "You received the diary."
 }
