--- a/src/main/resources/assets/arcana/lang/pt_br.json
+++ b/src/main/resources/assets/arcana/lang/pt_br.json
@@ -8,7 +8,7 @@
   "diary.arcana.tooltip.line3": "§8\"Eu desafiei as estrelas...\"",
 
   "advancement.arcana.root.title": "Arcana",
-  "advancement.arcana.root.description": "Os mistérios aguardam...",
-  "advancement.arcana.first_diary.title": "Primeiro Diário",
-  "advancement.arcana.first_diary.description": "Você recebeu o Diário Arcano pela primeira vez."
+  "advancement.arcana.root.description": "As estrelas nos observam...",
+  "advancement.arcana.first_diary.title": "Diário Esquisito",
+  "advancement.arcana.first_diary.description": "Você encontrou o diário."
 }
