--- a/src/main/resources/assets/arcana/lang/pt_br.json
+++ b/src/main/resources/assets/arcana/lang/pt_br.json
@@ -1,14 +1,22 @@
 {
-  "item.arcana.diary_kaliastrus": "Diário de Kaliastrus",
   "itemGroup.arcana.arcana_tab": "Arcana",
 
-  "diary.arcana.subtitle": "Crônica da Arrogância",
-  "diary.arcana.tooltip.line1": "§6Um tomo antigo de conhecimento proibido",
-  "diary.arcana.tooltip.line2": "§7Clique com o botão direito para ler",
-  "diary.arcana.tooltip.line3": "§8\"Eu desafiei as estrelas...\"",
+  "item.arcana.diary_kaliastrus": "Diário de Kaliastrus",
+  "item.arcana.diary_kaliastrus.tooltip.line1": "§6Um tomo antigo de conhecimento proibido",
+  "item.arcana.diary_kaliastrus.tooltip.line2": "§7Clique com o botão direito para ler",
+  "item.arcana.diary_kaliastrus.tooltip.line3": "§8\"Eu desafiei as estrelas...\"",
+
+  "item.arcana.strange_totem": "Totem Estranho",
+  "item.arcana.strange_totem.tooltip.line1": "a estrela desperta o que dorme",
+  "item.arcana.strange_totem.tooltip.line2": "o observador perde a si mesmo",
+  "item.arcana.strange_totem.tooltip.line3": "vinte e duas estrelas permanecem acima",
 
   "advancement.arcana.root.title": "Arcana",
   "advancement.arcana.root.description": "As estrelas nos observam...",
+
   "advancement.arcana.first_diary.title": "Diário Esquisito",
-  "advancement.arcana.first_diary.description": "Você encontrou o diário."
+  "advancement.arcana.first_diary.description": "Você encontrou o diário.",
+
+  "advancement.arcana.first_strange_totem.title": "Totem Estranho",
+  "advancement.arcana.first_strange_totem.description": "Você encontrou o primeiro totem estranho."
 }
